Added measurements data acquisition from the server.
The chart summary table does not display any data yet.

--- a/PiClimate.Monitor.WebAssembly/Pages/Index.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Index.razor
@@ -10,5 +10,5 @@
 @inject NavigationManager NavigationManager
 
 @{
-  NavigationManager.NavigateTo($"{nameof(Monitor)}/Offset/{TimePeriods.Day}");
+  NavigationManager.NavigateTo($"{Monitor.OffsetPath}/{TimePeriods.Day}");
 }
