--- a/PiClimate.Monitor.WebAssembly/_Imports.razor
+++ b/PiClimate.Monitor.WebAssembly/_Imports.razor
@@ -18,6 +18,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using PiClimate.Common
 @using PiClimate.Common.Components
 @using PiClimate.Common.Models
 @using PiClimate.Monitor.WebAssembly
