--- a/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor
@@ -8,7 +8,6 @@
 
 @page "/Monitor/Offset/{Offset:int}/{Resolution:int?}"
 @page "/Monitor/Period/{PeriodStart:datetime}/{PeriodEnd:datetime}/{Resolution:int?}"
-@using PiClimate.Monitor.WebAssembly.Components
 @inject HttpClient Client
 
 <div class="@(IsDataEmpty ? "empty" : "") @(IsDataUpdating ? "updating" : "") @(IsDataAcquisitionFailed ? "failed" : "")"
@@ -77,7 +76,7 @@
   /// <summary>
   ///   Gets or sets the chart settings object.
   /// </summary>
-  private ChartSettings ChartSettings { get; set; } = new();
+  private ChartSettings ChartSettings { get; set; } = new() {CultureInfo = CultureInfo.CurrentUICulture};
 
   /// <inheritdoc />
   protected override async Task OnParametersSetAsync()
