--- a/PiClimate.Monitor.WebAssembly/_Imports.razor
+++ b/PiClimate.Monitor.WebAssembly/_Imports.razor
@@ -6,6 +6,7 @@
   Copyright © 2020-2021 Maxim Yudin <stibiu@yandex.ru>
 *@
 
+@using System.Globalization
 @using System.Net.Http
 @using System.Net.Http.Json
 @using System.Reflection
@@ -22,6 +23,7 @@
 @using PiClimate.Common.Components
 @using PiClimate.Common.Models
 @using PiClimate.Monitor.WebAssembly
+@using PiClimate.Monitor.WebAssembly.Components
 @using PiClimate.Monitor.WebAssembly.Models
 @using PiClimate.Monitor.WebAssembly.Pages
 @using PiClimate.Monitor.WebAssembly.Shared
