--- a/PiClimate.Monitor.WebAssembly/Pages/Components/NavMenu.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/NavMenu.razor
@@ -8,12 +8,12 @@
 
 @inject NavigationManager NavigationManager
 
-<ul class="navbar-nav flex-row flex-lg-column flex-fill flex-wrap w-100">
+<ul class="navbar-nav d-flex flex-row flex-lg-column flex-wrap w-100">
   <li class="nav-item px-3">
     <a class="navbar-brand" href="/">@nameof(PiClimate) @nameof(Monitor)</a>
   </li>
 
-  <hr class="border-light w-100 d-none d-lg-block mx-0" />
+  <hr class="d-none d-lg-block border-light w-100 my-2" />
 
   <li class="flex-fill d-lg-none"></li>
 
@@ -39,7 +39,7 @@
     </li>
   </AuthorizeView>
 
-  <hr class="border-light w-100" />
+  <hr class="border-light w-100 my-2" />
 
   <li class="w-100 d-lg-none"></li>
 
