--- a/PiClimate.Monitor.WebAssembly/Pages/Components/SiteFooter.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/SiteFooter.razor
@@ -6,11 +6,11 @@
   Copyright © 2020-2021 Maxim Yudin <stibiu@yandex.ru>
 *@
 
-<div id="footer" class="text-center small text-secondary">
+<footer class="text-center small text-secondary">
   Copyright © @CopyrightYears
   @Company
   <a href="@RepositoryUrl" class="nav-link d-inline" target="_blank">@RepositoryName</a>
-</div>
+</footer>
 
 @code
 {
