--- a/PiClimate.Monitor.WebAssembly/_Imports.razor
+++ b/PiClimate.Monitor.WebAssembly/_Imports.razor
@@ -26,4 +26,4 @@
 @using PiClimate.Monitor.WebAssembly.Components
 @using PiClimate.Monitor.WebAssembly.Models
 @using PiClimate.Monitor.WebAssembly.Pages
-@using PiClimate.Monitor.WebAssembly.Shared
+@using PiClimate.Monitor.WebAssembly.Pages.Components
