--- a/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor.css
+++ b/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor.css
@@ -1,13 +1,28 @@
+/*
+  This Source Code Form is subject to the terms of the Mozilla Public
+  License, v. 2.0. If a copy of the MPL was not distributed with this
+  file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
+  Copyright © 2020-2021 Maxim Yudin <stibiu@yandex.ru>
+ */
+
+.bottom-0
+{
+  bottom: 0 !important;
+}
+
 .empty::before,
 .updating::before,
 .failed::before
 {
+  display: block;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
+  visibility: visible !important;
   content: "";
   z-index: 10000;
 }
@@ -16,11 +31,14 @@
 .updating::after,
 .failed::after
 {
+  display: block;
   position: absolute;
-  top: 50%;
+  top: calc(50% - 0.8em);
+  left: 0;
   width: 100%;
   text-align: center;
   font-size: 1.5em;
+  visibility: visible !important;
   content: "";
   z-index: 10001;
 }
@@ -44,9 +62,10 @@
 }
 
 /*noinspection CssInvalidPseudoSelector*/
-.updating ::deep.chart-wrapper,
-.failed ::deep.chart-wrapper,
-.empty ::deep.chart-wrapper
+.updating ::deep *,
+.failed ::deep *,
+.empty ::deep *
 {
-  visibility: hidden;
+  display: none;
+  visibility: collapse;
 }
