Fixed units localization for two-letter browser locales.
UnitsNet library does not support short two-letter locale names without
country code specification. Now the two-letter codes are converted to
their default long locale names, so unit abbreviation localization
(where available) is performed correctly.

--- a/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Monitor.razor
@@ -82,7 +82,7 @@
   /// <summary>
   ///   Gets or sets the chart settings object.
   /// </summary>
-  private ChartSettings ChartSettings { get; set; } = new() {CultureInfo = CultureInfo.CurrentUICulture};
+  private ChartSettings ChartSettings { get; set; } = new() {CultureInfo = LocalizationUtils.GetBrowserCultureInfo()};
 
   /// <inheritdoc />
   protected override async Task OnParametersSetAsync()
