Changed the default chart resolution for Monitor.
It is now set to 500 points per period. This shall improve chart
rendering performance by default. Higher resolutions (up to 3000 points)
as before are achievable through selecting a custom period.
Also made some small code optimizations.

--- a/PiClimate.Monitor.WebAssembly/Pages/Components/Chart.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/Chart.razor
@@ -6,7 +6,7 @@
   Copyright © 2020-2021 Maxim Yudin <stibiu@yandex.ru>
 *@
 
-@inject IJSRuntime JsRuntime
+@inject IJSRuntime _jsRuntime
 
 <canvas id="@ChartSettings.ChartId" class="chart-canvas p-3"></canvas>
 
@@ -46,7 +46,7 @@
   {
     try
     {
-      await JsRuntime.InvokeVoidAsync(ChartInitializationFunctionName, ChartSettings.ChartId,
+      await _jsRuntime.InvokeVoidAsync(ChartInitializationFunctionName, ChartSettings.ChartId,
         ChartSettings.CreateChartJsOptions(PeriodStart, PeriodEnd, Measurements));
     }
     catch
