--- a/PiClimate.Monitor.WebAssembly/Pages/Components/NavMenu.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/NavMenu.razor
@@ -6,7 +6,7 @@
   Copyright © 2020-2021 Maxim Yudin <stibiu@yandex.ru>
 *@
 
-@inject NavigationManager NavigationManager
+@inject NavigationManager _navigationManager
 
 <ul class="navbar-nav d-flex flex-row flex-lg-column flex-wrap w-100">
   <li class="nav-item px-2">
@@ -81,7 +81,7 @@
         <li id="custom-period-form" class="collapse w-100">
           <div class="nav-item p-2 w-100">
             <EditForm Model="@this" OnValidSubmit="CustomPeriodSubmit"
-              class="form-row flex-lg-column align-items-end bg-dark rounded w-100 m-0">
+                      class="form-row flex-lg-column align-items-end bg-dark rounded w-100 m-0">
               <div class="form-group col-4 col-lg p-2 m-0">
                 <label class="text-light">From:</label>
                 <InputDate @bind-Value="@CustomPeriodStartDate" class="form-control form-control-sm mb-1" />
@@ -95,8 +95,11 @@
               </div>
 
               <div class="form-group col-4 col-lg p-2 m-0">
-                <label class="text-light">Resolution (1-3000):</label>
-                <InputNumber @bind-Value="@CustomResolution" class="form-control form-control-sm mb-1" min="1" max="3000" />
+                <label class="text-light">
+                  Resolution (@MeasurementFilter.MinimalResolution-@MeasurementFilter.MaximalResolution):
+                </label>
+                <InputNumber @bind-Value="@CustomResolution" class="form-control form-control-sm mb-1"
+                             min="@MeasurementFilter.MinimalResolution" max="@MeasurementFilter.MaximalResolution" />
                 <button type="submit" class="btn btn-block btn-sm btn-light">Show</button>
               </div>
             </EditForm>
@@ -122,7 +125,7 @@
   /// <summary>
   ///   Checks or sets if the custom period is active at the moment.
   /// </summary>
-  private bool IsCustomPeriodActive => $"/{NavigationManager.ToBaseRelativePath(NavigationManager.Uri)}"
+  private bool IsCustomPeriodActive => $"/{_navigationManager.ToBaseRelativePath(_navigationManager.Uri)}"
     .StartsWith(Monitor.PeriodPath);
 
   /// <summary>
@@ -152,7 +155,7 @@
   private int CustomResolution { get; set; } = MeasurementFilter.DefaultResolution;
 
   /// <inheritdoc />
-  protected override void OnInitialized() => NavigationManager.LocationChanged += (_, _) => StateHasChanged();
+  protected override void OnInitialized() => _navigationManager.LocationChanged += (_, _) => StateHasChanged();
 
   /// <summary>
   ///   Updates the custom period values.
@@ -172,6 +175,6 @@
   /// <summary>
   ///   The callback method handling the custom period button click.
   /// </summary>
-  private void CustomPeriodSubmit() => NavigationManager.NavigateTo(
+  private void CustomPeriodSubmit() => _navigationManager.NavigateTo(
     $"{Monitor.PeriodPath}/{CustomPeriodStartDate + CustomPeriodStartTime.TimeOfDay:s}/{CustomPeriodEndDate + CustomPeriodEndTime.TimeOfDay:s}/{CustomResolution}");
 }
