--- a/PiClimate.Monitor.WebAssembly/Pages/Components/SiteFooter.razor
+++ b/PiClimate.Monitor.WebAssembly/Pages/Components/SiteFooter.razor
@@ -17,28 +17,28 @@
   /// <summary>
   ///   Defines the program creation year.
   /// </summary>
-  const int CreationYear = 2020;
+  private const int CreationYear = 2020;
 
   /// <summary>
   ///   Defines the main repository URL.
   /// </summary>
-  const string RepositoryUrl = @"https://github.com/Egiraht/PiClimate";
+  private const string RepositoryUrl = @"https://github.com/Egiraht/PiClimate";
 
   /// <summary>
   ///   Defines the main repository name.
   /// </summary>
-  const string RepositoryName = "GitHub";
+  private const string RepositoryName = "GitHub";
 
   /// <summary>
   ///   Gets the company name (author) from the assembly info.
   /// </summary>
-  string Company => Assembly.GetExecutingAssembly()
+  private string Company => Assembly.GetExecutingAssembly()
     .GetCustomAttribute<AssemblyCompanyAttribute>()
     ?.Company ?? "";
 
   /// <summary>
   ///   Gets the copyright years string.
   /// </summary>
-  string CopyrightYears =>
+  private string CopyrightYears =>
     DateTime.Now.Year > CreationYear ? $"{CreationYear}-{DateTime.Now.Year}" : CreationYear.ToString();
 }
