Reimplemented the cookie-based user authentication.
The cookie-based authentication is more secure and has better
server-side support than the JWT-based authentication that was planned
to be used earlier.

--- a/PiClimate.Monitor.WebAssembly/App.razor
+++ b/PiClimate.Monitor.WebAssembly/App.razor
@@ -22,9 +22,7 @@
           }
           else
           {
-            <div>
-              Login form.
-            </div>
+            <AuthPanel />
           }
         </NotAuthorized>
       </AuthorizeRouteView>
