--- a/PiClimate.Monitor.WebAssembly/_Imports.razor
+++ b/PiClimate.Monitor.WebAssembly/_Imports.razor
@@ -7,11 +7,13 @@
 *@
 
 @using System.Globalization
+@using System.Net
 @using System.Net.Http
 @using System.Net.Http.Json
 @using System.Reflection
 @using System.Security.Claims
 @using System.Security.Principal
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -27,3 +29,4 @@
 @using PiClimate.Monitor.WebAssembly.Models
 @using PiClimate.Monitor.WebAssembly.Pages
 @using PiClimate.Monitor.WebAssembly.Pages.Components
+@using PiClimate.Monitor.WebAssembly.Services
